[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/game/world/objective/Objective.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/objective/BombSwitch.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/prop/bomb_switch.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 1 )

[node name="BombSwitch" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 5 )
animation = "off"

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="PressArea" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressArea" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="BombTimer" type="Timer" parent="." index="3"]

[connection signal="body_entered" from="PressArea" to="." method="_on_PressArea_body_entered"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
